--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
             "Afrizalmy\\Laratoast\\": "src/"
         },
         "files": [
-            "src/helper.php"
+            "src/helpers.php"
         ]
     },
     "license": "MIT",
