--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,13 @@
             "src/helpers.php"
         ]
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Afrizalmy\\Laratoast\\LaratoastServiceProvider"
+            ]
+        }
+    },
     "license": "MIT",
     "minimum-stability": "stable"
 }
